changes done which was suggested by Amar

--- a/Vehicle/app/views/panel_customerVehicleDetails.jade
+++ b/Vehicle/app/views/panel_customerVehicleDetails.jade
@@ -10,10 +10,10 @@ tr
 					th#customerVehDetHeader(colspan="2" style="font-size: 18px;text-align: left;font-weight: bold;") Customer Vehicle Details
 				tr
 					td
-						h5 Make:
+						h5 Model:
 					td
 						legend 
-							input(type="text" disabled name="upMake" placeholder="Make")
+							input(type="text" disabled name="upMake" placeholder="Model")
 				tr
 					td
 						h5 Chassis Number:
