--- a/Vehicle/app/views/panel_vehicleDashboard.jade
+++ b/Vehicle/app/views/panel_vehicleDashboard.jade
@@ -18,8 +18,12 @@
 		div(style="text-align:center")
 			span#spinner2.fa.fa-circle-o-notch.fa-spin(style="font-size: 80px;color:#5596E6")					
 		#openTrades
+
+			
+
 			div#searchBar(style="display:block; margin-top:12px;width:20%;height:30px;font-size: 15px;text-align: left;font-weight: bold;color:#5596E6;border-bottom:0px #D4DCDC solid;")				
-				input#scChassisNumber(type="text" name="scChassisNumber" placeholder="Chassis Number")
+				span(style="margin-left:5px;") Chassis Number: 
+				input#scChassisNumber(type="text" name="scChassisNumber" placeholder="")
 
 
 
