--- a/Vehicle/app/views/panel_createVehicle.jade
+++ b/Vehicle/app/views/panel_createVehicle.jade
@@ -8,10 +8,10 @@
 			table#createVehicleTable(style="width:50%;float:left;    margin-top: -48px;")
 				tr
 					td
-						h5 Make:
+						h5 Model:
 					td
 						legend 
-							input(type="text" name="Make" placeholder="Make")
+							input(type="text" name="Make" placeholder="Model")
 				tr
 					td
 						h5 Chassis Number:
