--- a/Vehicle/app/views/panel_createVehicle.jade
+++ b/Vehicle/app/views/panel_createVehicle.jade
@@ -5,7 +5,7 @@
 	#innerWrap
 		
 		form(action="/newVehicle" method="POST")#newPartform
-			table#createVehicleTable(style="width:50%;float:left;    margin-top: -48px;")
+			table#createVehicleTable(style="width:65%;float:left;margin-top: -48px;margin-bottom:70px;")
 				tr
 					td
 						h5 Model:
@@ -21,11 +21,29 @@
 							select#allModelVariant(name="allModelVariant")							
 				tr
 					td
-						h5 Chassis Number:
+						h5 Engine:
 					td
 						legend 
-							input(type="text" name="ChassisNumber" placeholder="Chassis Number")
+							select#allEngines(name="allEngines")
 				tr
+					td
+						h5 Gear Box:
+					td
+						legend 
+							select#allGearBoxes(name="allGearBoxes")
+				tr
+					td
+						h5 Color:
+					td
+						legend 
+							select#allColors(name="allColors")
+				tr
+					td
+						h5 VIN:
+					td
+						legend 
+							input(type="text" name="ChassisNumber" placeholder="")
+				tr(style="display:none;")
 					td
 						h5 Vin:
 					td
@@ -38,3 +56,8 @@
 								span.fa.fa-plus &nbsp;&nbsp;
 								span SUBMIT
 				
+			
+			table(style="width:30%;float:left;margin-top:-48px; margin-left:10px")
+				tr(style="border-bottom:0px;")
+					td#carImage(style="width:100px;height:100px;border:0px solid #ccc;")					
+			
